--- a/output/home.html
+++ b/output/home.html
@@ -12,4 +12,18 @@
             background:url("/nowthis.io.png") center center no-repeat;
         }
     </style>
+    <div id="counter">HERE</div>
+    <script>
+    function getCounter() {
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function() {
+            if (this.readyState == 4 && this.status == 200) {
+                document.getElementById("counter").innerHTML = this.responseText;
+            }
+        };
+        xhttp.open("GET", "/visits", true);
+        xhttp.send();
+    }
+    getCounter();
+    </script>    
 </html>
